--- a/mission.html
+++ b/mission.html
@@ -6,6 +6,6 @@
 <body>
 <h1>Основная задача кафе Starbuzz</h1>
 <p>Обеспечить вас необходимым количеством кофеина для поддержанмя жизненного тонуса.</p>
-<p> Просто выпейте это.</p>
+<p> Просто выпейте это!</p>
 </body>
 </html>
