--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
 	<p>Смесь эспрессо и кипяченого молока с добавлением пены</p>
 	<h2>Чай, $1,85<h2>
 		<p>Ароматный напиток из черного чая, специй и мёда.</p>
+		<p><a href="mission.html">Ознакомтесь с нашей задачей</a>
+			<br>
+			Читайте здесь<a href="htpp://wicedlysmart.com/buzz"> Всё о кофеине</a>
+			 здесь</p>
 
-		
+		 </body>
+
+		 </html>
