added title by a mission

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<p>Смесь эспрессо и кипяченого молока с добавлением пены</p>
 	<h2>Чай, $1,85<h2>
 		<p>Ароматный напиток из черного чая, специй и мёда.</p>
-		<p><a href="mission.html">Ознакомтесь с нашей задачей</a>
+		<p><a href="mission.html" title="Наша задача">Ознакомтесь с нашей задачей</a>
 			<br>
 			Читайте здесь<a href="htpp://wicedlysmart.com/buzz" title="Всё самое
 			интересное о кофеине"> Всё о кофеине</a>
