--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<p>Ароматный напиток из черного чая, специй и мёда.</p>
 		<p><a href="mission.html" title="Наша задача">Ознакомтесь с нашей задачей</a>
 			<br>
-			Читайте здесь<a href="htp://wickedlysmart.com/buzz" title="Всё самое
+			Читайте здесь<a href="http://wickedlysmart.com/buzz" title="Всё самое
 			интересное о кофеине"> Всё о кофеине</a>
 			 здесь</p>
 
